force-app/main/default/objects/TrackIT__Inv_Transaction__c/TrackIT__Inv_Transaction__c.object-meta.xml
<CustomObject>
    <description>Stores all inventory transaction records in Facility Manager</description>
    <label>Inventory Transaction</label>
    <nameField>
        <label>Inventory Transaction Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>