force-app/main/default/objects/TrackIT__Inv_Transaction__c/fields/TrackIT__Assignee__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assignee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>TrackIT__Assignee__c</referenceTo>
    <relationshipName>Inv_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>