force-app/main/default/objects/TrackIT__Inv_Transaction__c/fields/TrackIT__Computer_Maintenance_Transaction__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Computer_Maintenance_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Computer Maintenance Transaction</label>
    <referenceTo>TrackIT__Computer_Maintenance_Transaction__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>