force-app/main/default/objects/TrackIT__Inv_Transaction__c/fields/TrackIT__Inv_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inv_Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Receive</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Move</fullName>
            </value>
            <value>
                <fullName>Adjust (+)</fullName>
            </value>
            <value>
                <fullName>Adjust (-)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>