force-app/main/default/objects/TrackIT__Inv_Transaction__c/fields/TrackIT__Location_Repair_and_Inspect_Transaction__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Location_Repair_and_Inspect_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Repair and Inspect Transaction</label>
    <referenceTo>TrackIT__Location_Inspection_Transactions__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>