force-app/main/default/objects/TrackIT__Inv_Transaction__c/fields/TrackIT__Maintenance_and_Inspection_Transaction__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Maintenance_and_Inspection_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance and Inspection Transaction</label>
    <referenceTo>TrackIT__Maint_and_Insp_Transactions__c</referenceTo>
    <relationshipLabel>Inventory Transactions</relationshipLabel>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>