force-app/main/default/objects/TrackIT__Inv_Transaction__c/fields/TrackIT__Quantity__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>