force-app/main/default/objects/TrackIT__Inv_Transaction__c/fields/TrackIT__To_Location__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__To_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>To Location</label>
    <referenceTo>TrackIT__Location__c</referenceTo>
    <relationshipName>Inv_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>