force-app/main/default/objects/TrackIT__Inv_Transaction__c/validationRules/TrackIT__Inv_Trans_ID_Change_After_Creation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__Inv_Trans_ID_Change_After_Creation_Rule</fullName>
    <active>true</active>
    <description>Prevents users from changing Inventory Transaction ID after the Inventory Transaction Record is initially created.</description>
    <errorConditionFormula>IF(ISNULL( PRIORVALUE( Name )),FALSE,ISCHANGED( Name ) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Inventory Transaction ID cannot be changed after initial creation.</errorMessage>
</ValidationRule>